projekt/k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
  labels:
    app: client-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-deploy
  template:
    metadata:
      labels:
        app: client-deploy
    spec:
      containers:
      - name: client-deploy
        image: merski001/client
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
