projekt/k8s/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy
  labels:
    app: server-deploy
spec:
  selector:
    matchLabels:
      app: server-deploy
  template:
    metadata:
      labels:
        app: server-deploy
    spec:
      containers:
      - name: server-deploy
        image: merski001/backend
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
